# collaborative-todo

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.apprunner  Dockerfile.prod  Dockerfile.railway  README.org  docker-compose.dev.yaml  docker-compose.test.yaml  docker-compose.yaml
client/: .dir-locals.el  .eslintrc.cjs  index.html  package.json  pnpm-lock.yaml  vite.config.ts
client/src/: App.tsx  main.tsx
client/src/components/: AuthLayout.tsx  AuthOutlet.tsx  BaseTabsLayout.tsx  CreateTask.tsx  CreateTeam.tsx  Fallback.tsx  Footer.tsx  Home.tsx  JoinTeam.tsx  Layout.tsx  MyLocalTasks.tsx  MyTasks.tsx  Navbar.tsx  NetworkTabsOutlet.tsx  NoTask.tsx  NonFieldErrors.tsx  QueryError.tsx  SearchForm.tsx  TaskForm.tsx  TaskList.tsx  TasksSection.tsx  Teams.tsx  ToggleTheme.tsx
client/src/hooks/: demoTasks.ts  filter.ts  networkTasks.ts  tasks.ts
client/src/lib/: apiClient.ts  csrf.ts
client/src/routes/: forgot-password.tsx  index.tsx  login.tsx  register.tsx  root.tsx  (+3 more)
nginx/: default.conf  nginx.conf
server/: .dir-locals.el  .env.example  .gitignore  README.org  dev-requirements.txt  docker-compose.yaml  pyproject.toml  requirements.txt
server/app/: auth.py  config.py  main.py  models.py  register.http  schemas.py  tasks.py  teams.py
server/migrations/versions/: 5f34a5bffed3_my_migration_message.py
server/tests/: conftest.py  test_auth_login.py  test_auth_logout.py  test_auth_register.py  test_auth_user.py  test_csrf.py  test_my_team.py  test_reset_password.py  test_reset_password_token.py  test_reset_password_token_verify.py  test_tasks_create_tasks.py  test_tasks_delete_task.py  test_tasks_list_tasks.py  test_tasks_update_task.py  test_teams_create_team.py  test_teams_join_team.py  test_teams_leave_team.py  test_teams_my_team.py  tests_tasks_update_task.py
(+14 files in other folders)
